--- a/speech/speech.html
+++ b/speech/speech.html
@@ -8,9 +8,33 @@
   <link rel="stylesheet" href="./css/styleSpeech.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.4/dist/sweetalert2.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+  <style>
+    .home {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 2rem;
+    color: #fdfdfd;
+    text-decoration: none;
+    transition: transform 0.3s;
+    border: 2px solid white; /* إضافة إطار أبيض */
+    border-radius: 50%; /* جعل الإطار دائري */
+    padding: 10px; /* إضافة مساحة داخلية لتوسيع الإطار حول الأيقونة */
+    background-color: rgba(255, 255, 255, 0.2); /* إضافة خلفية خفيفة */
+  }
+
+  .home:hover {
+    transform: scale(1.2);
+  }
+</style>
+  
 </head>
 <body>
-
+    <!-- أيقونة الصفحة الرئيسية مع إطار دائري -->
+    <a class='nav-link home' href='index.html'>
+      <i class='fa fa-home fa-lg' aria-hidden='false'></i>
+      <span class='sr-only'>(current)</span>
+    </a>
   <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
