--- a/speech/index.html
+++ b/speech/index.html
@@ -101,7 +101,7 @@
 
   <!-- Footer with credits -->
   <footer style="text-align: center; margin-top: 20px;">
-    <p>&copy; 2024 Create By Tala ALmasoud</p>
+    <p>&copy; 2024 Create By Diala ALmasoud</p>
   </footer>
 
   <!-- External JS -->
